File: logo.png added, overflow problem solved

--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,14 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
+    scrollbar-width: none;
 }
 
 .task{
     background-color: #212121;
-    height: 2.5vw;
+    min-height: 3vw;
+    height: 3vw;
     width: 90%;
     overflow: hidden;
     border-radius: 100px;
@@ -201,10 +204,13 @@ form{
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: auto;
+        scrollbar-width: none;
     }
     
     .task{
         background-color: #212121;
+        min-height: 8vw;
         height: 8vw;
         width: 90%;
         overflow: hidden;
